src/objects/Bank_Deposit__c.object
<CustomObject>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <description>This is the date the lock box check was deposited.</description>
        <inlineHelpText>This is the date the lock box check was deposited.</inlineHelpText>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Slip_Number__c</fullName>
        <description>This is the Deposit Ticket Number from the lock box deposit.</description>
        <inlineHelpText>This is the Deposit Ticket Number from the lock box deposit.</inlineHelpText>
        <label>Deposit Slip Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Financial_Account__c.Bank_Account__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Financial_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Bank Deposits</relationshipLabel>
        <relationshipName>Bank_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>This is the total of the deposit from the lock box. This amount should tie to the deposit total on the bank statement.</description>
        <inlineHelpText>This is the total of the deposit from the lock box. This amount should tie to the deposit total on the bank statement.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bank Deposit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deposit_Slip_Number__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Total__c</columns>
        <columns>Posted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BD-{0000000}</displayFormat>
        <label>Bank Deposit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Deposits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>